z-index fixed

--- a/src/components/Trends/TrendsTable/TrendsTable.module.scss
+++ b/src/components/Trends/TrendsTable/TrendsTable.module.scss
@@ -88,4 +88,9 @@
 
 .wordCloud {
   width: 400px;
+  height: 320px;
+}
+
+.tooltip {
+  z-index: 10;
 }
